Include required module opens for jdk 16+ in readme (see #45)